[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxpop"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Semaphor", email = "info@semaphor.dk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django>=4.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/semaphor-dk/voxpop#readme"
Issues = "https://github.com/semaphor-dk/voxpop/issues"
Source = "https://github.com/semaphor-dk/voxpop/"

[tool.hatch.version]
path = "voxpop/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE.txt",
    "README.txt",
    "/voxpop",
]
